--- a/fornecedor/src/main/resources/application.yml
+++ b/fornecedor/src/main/resources/application.yml
@@ -1,2 +1,16 @@
 server:
   port: 8081
+
+
+spring:
+  datasource:
+    password: root
+    username: root
+    url: jdbc:mysql://localhost:3306/fornecedor?useTimezone=true&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      ddl-auto: create
