--- a/fornecedor/src/main/resources/application.yml
+++ b/fornecedor/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 
 
 spring:
+  application:
+    name: 'fornecedor'
   datasource:
     password: root
     username: root
@@ -14,3 +16,10 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       ddl-auto: create
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
