Fixes #11 Configura para usar o repositório Microservices-repo

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
   port: 8888
 spring:
-  profiles:
-    active: native
   cloud:
     config:
       server:
-        native:
-          search-locations: c:/microservice-repo
+        git:
+          uri: https://github.com/victtorfreitas/microservice-repo
+          search-paths: fornecedor
+          default-label: main
 
